syntax = "proto3";

package proto;

service MasterService {
	rpc SendWorkerData(WorkerData) returns (WorkerDataResponse);
}

service WorkerService {
	rpc GetSamples (SampleRequest) returns (Pivots);
	rpc StartShuffle (ShuffleRequest) returns (ShuffleResponse);
	rpc SendData (DataRequest) returns (DataResponse);
	rpc StartMerge (MergeRequest) returns (MergeResponse);
}

message WorkerData {
	int64 fileSize = 1;
	int32 workerPort = 2;
}
message WorkerDataResponse {}


message Entity {
	string head = 1;
	string body = 2;
}

message Pivots {
	repeated string pivots = 1;
}

message Address {
	string ip = 1;
	int32 port = 2;
}

message SampleRequest {
	int32 offset = 1;
}

message SampleResponse {
	repeated string pivots = 1;
}

message ShuffleRequest {
	Pivots pivots = 1;
	repeated Address workerAddresses = 2;
	int32 workerNumber = 3;
}

message ShuffleResponse {}

message DataRequest {
	int32 workerNumber = 1;
	bool has_next = 2;
	repeated Entity payload = 3;
}

message DataResponse {}

message MergeRequest {}
message MergeResponse {}
